# Smart_supporter

./: .env.example  .gitignore  1.py  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 170ac94e3db6_init.py
app/: config.py  database.py  main.py
app/agent/: __init__.py  classifier.py  heuristics.py  llm_provider.py  matcher.py  prompts.py  responder.py  router.py
app/api/: deps.py
app/api/v1/: auth.py  tickets.py  users.py
app/middleware/: __init__.py
app/models/: __init__.py  documentation.py  error_log.py  faq.py  ticket.py  ticket_history.py  user.py
app/repositories/: __init__.py  base.py  documentation_repository.py  faq_repository.py  ticket_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  common.py  faq.py  ticket.py  user.py
app/services/: __init__.py  agent_service.py  auth_service.py  ticket_service.py  user_service.py
app/tasks/: __init__.py  celery_app.py  ticket_tasks.py
app/utils/: db_manager.py  errors.py  security.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: auth.ts  client.ts  tickets.ts  users.ts
frontend/src/components/: Dashboard.tsx  ErrorBoundary.tsx  Icons.tsx  LoginPage.tsx  PageSkeleton.tsx  Pills.tsx  Sidebar.tsx  TicketCreate.tsx  TicketDetail.tsx  TicketList.tsx  Toast.tsx
progress/: 000-plan.md
tests/: conftest.py  test_agent.py  test_auth.py  test_tickets.py
(+3 files in other folders)
