[project]
name = "supports-triager"
version = "0.1.0"
description = "Automated Tech-Support Triager — FastAPI + LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "bcrypt>=4.1.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "redis>=6.4.0",
    "ruff>=0.15.13",
    "sqlalchemy>=2.0.49",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
files = ["app/", "tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = "type-var"
